; ModuleID = '/home/carl/AnghaBench/git/extr_preload-index.c_repo_read_index_preload.c'
source_filename = "/home/carl/AnghaBench/git/extr_preload-index.c_repo_read_index_preload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { i32 }
%struct.pathspec = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @repo_read_index_preload(%struct.repository* %0, %struct.pathspec* %1, i32 %2) #0 {
  %4 = alloca %struct.repository*, align 8
  %5 = alloca %struct.pathspec*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.repository* %0, %struct.repository** %4, align 8
  store %struct.pathspec* %1, %struct.pathspec** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.repository*, %struct.repository** %4, align 8
  %9 = call i32 @repo_read_index(%struct.repository* %8)
  store i32 %9, i32* %7, align 4
  %10 = load %struct.repository*, %struct.repository** %4, align 8
  %11 = getelementptr inbounds %struct.repository, %struct.repository* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.pathspec*, %struct.pathspec** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @preload_index(i32 %12, %struct.pathspec* %13, i32 %14)
  %16 = load i32, i32* %7, align 4
  ret i32 %16
}

declare dso_local i32 @repo_read_index(%struct.repository*) #1

declare dso_local i32 @preload_index(i32, %struct.pathspec*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
